--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ section {
   text-align: center;
   color: #fff;
   font-size: 30px;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .section_title h2:hover {
@@ -42,8 +42,8 @@ section {
 /* header */
 
 header {
-  background: rgb(44,37,37);
-  border-bottom: 1px solid rgba(238,238,238,0.801);
+  background: rgb(44, 37, 37);
+  border-bottom: 1px solid rgba(238, 238, 238, 0.801);
   position: fixed;
   width: 100%;
   z-index: 5;
@@ -67,11 +67,11 @@ header {
   color: #fff;
   padding: 5px 15px;
   border-radius: 5px;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .nav_links li a:hover {
-  background: #24caac ;
+  background: #24caac;
 }
 
 .logo h2 a {
@@ -116,10 +116,150 @@ header {
   border: 1px solid #24caac;
   font-weight: 700;
   cursor: pointer;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .btn:hover {
   background: transparent;
   letter-spacing: 2px;
+}
+
+/* Software */
+
+.inner_software {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.inner_software_child {
+  flex-basis: 31%;
+  color: #fff;
+  padding: 25px 20px;
+  background: rgba(55, 66, 80, 0.281);
+  border-radius: 5px;
+  border: 1px solid transparent;
+  transition: all 0.5s ease-in;
+}
+
+.inner_software_child:hover {
+  border: 1px solid #24caac;
+}
+
+.inner_software_child .icon {
+  font-size: 25px;
+  color: #24caac;
+}
+
+.inner_software_child h3 {
+  font-size: 20px;
+  margin: 7px 0;
+}
+
+.inner_software_child p {
+  font-size: 16px;
+}
+
+/* Certificates */
+
+.inner_courses {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.child_courses {
+  flex-basis: 24%;
+  color: #fff;
+  padding: 20px 10px;
+  border: 1px solid transparent;
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.child_courses:hover {
+  border: 1px solid #24caac;
+}
+
+.child_courses .course_img {
+  width: 60%;
+  margin: 15px auto;
+}
+
+.child_courses .detail {
+  display: flex;
+  justify-content: space-between;
+}
+
+.child_courses .detail ul {
+  display: flex;
+  justify-content: space-between;
+  flex-basis: 25%;
+}
+
+.child_courses .detail ul li {
+  color: gold;
+}
+
+/* Achievements */
+
+.inner_achievement {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+}
+.child_achievement {
+  flex-basis: 40%;
+}
+
+.child_achievement img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.child_achievement2 {
+  flex-basis: 46%;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-between;
+}
+
+.single_detail {
+  flex-basis: 48%;
+  padding: 40px 30px;
+  color: #fff;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.single_detail:hover {
+  transform: scale(1.03);
+}
+
+.sd_1 {
+  background: #eaa023;
+  margin-bottom: 20px;
+}
+
+.sd_2 {
+  background: #e91e63;
+  margin-bottom: 20px;
+}
+
+.sd_3 {
+  background: #24caac;
+}
+
+.sd_4 {
+  background: #2f363e;
 }
